; ModuleID = '/home/carl/AnghaBench/linux/drivers/i2c/busses/extr_i2c-mxs.c_mxs_i2c_dma_finish.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/i2c/busses/extr_i2c-mxs.c_mxs_i2c_dma_finish.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mxs_i2c_dev = type { i32*, i32, i64 }

@DMA_TO_DEVICE = common dso_local global i32 0, align 4
@DMA_FROM_DEVICE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mxs_i2c_dev*)* @mxs_i2c_dma_finish to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mxs_i2c_dma_finish(%struct.mxs_i2c_dev* %0) #0 {
  %2 = alloca %struct.mxs_i2c_dev*, align 8
  store %struct.mxs_i2c_dev* %0, %struct.mxs_i2c_dev** %2, align 8
  %3 = load %struct.mxs_i2c_dev*, %struct.mxs_i2c_dev** %2, align 8
  %4 = getelementptr inbounds %struct.mxs_i2c_dev, %struct.mxs_i2c_dev* %3, i32 0, i32 2
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %26

7:                                                ; preds = %1
  %8 = load %struct.mxs_i2c_dev*, %struct.mxs_i2c_dev** %2, align 8
  %9 = getelementptr inbounds %struct.mxs_i2c_dev, %struct.mxs_i2c_dev* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 8
  %11 = load %struct.mxs_i2c_dev*, %struct.mxs_i2c_dev** %2, align 8
  %12 = getelementptr inbounds %struct.mxs_i2c_dev, %struct.mxs_i2c_dev* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = getelementptr inbounds i32, i32* %13, i64 0
  %15 = load i32, i32* @DMA_TO_DEVICE, align 4
  %16 = call i32 @dma_unmap_sg(i32 %10, i32* %14, i32 1, i32 %15)
  %17 = load %struct.mxs_i2c_dev*, %struct.mxs_i2c_dev** %2, align 8
  %18 = getelementptr inbounds %struct.mxs_i2c_dev, %struct.mxs_i2c_dev* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 8
  %20 = load %struct.mxs_i2c_dev*, %struct.mxs_i2c_dev** %2, align 8
  %21 = getelementptr inbounds %struct.mxs_i2c_dev, %struct.mxs_i2c_dev* %20, i32 0, i32 0
  %22 = load i32*, i32** %21, align 8
  %23 = getelementptr inbounds i32, i32* %22, i64 1
  %24 = load i32, i32* @DMA_FROM_DEVICE, align 4
  %25 = call i32 @dma_unmap_sg(i32 %19, i32* %23, i32 1, i32 %24)
  br label %35

26:                                               ; preds = %1
  %27 = load %struct.mxs_i2c_dev*, %struct.mxs_i2c_dev** %2, align 8
  %28 = getelementptr inbounds %struct.mxs_i2c_dev, %struct.mxs_i2c_dev* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 8
  %30 = load %struct.mxs_i2c_dev*, %struct.mxs_i2c_dev** %2, align 8
  %31 = getelementptr inbounds %struct.mxs_i2c_dev, %struct.mxs_i2c_dev* %30, i32 0, i32 0
  %32 = load i32*, i32** %31, align 8
  %33 = load i32, i32* @DMA_TO_DEVICE, align 4
  %34 = call i32 @dma_unmap_sg(i32 %29, i32* %32, i32 2, i32 %33)
  br label %35

35:                                               ; preds = %26, %7
  ret void
}

declare dso_local i32 @dma_unmap_sg(i32, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
